<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopping List</string>

    <string name="image_description"/>

    <string name="label_list_empty">Empty List</string>
    <string name="label_quantity">Quantity:</string>
    <string name="label_product_category">Category</string>
    <string name="label_product_new_category">New category</string>
    <string name="label_product_name">Name</string>
    <string name="label_product_picture">Picture</string>
    <string name="label_error">Error</string>
    <string name="label_select_picture_source">Select picture source</string>
    <string name="label_source_gallery">Gallery</string>
    <string name="label_source_camera">Camera</string>
    <string name="label_share_cart">Share list with</string>
    <string name="label_already_in_cart">Already in cart</string>
    <string name="label_initializing_database">Initializing database&#8230;</string>

    <string name="button_accept">Accept</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_edit">Edit</string>
    <string name="button_remove">Remove</string>
    <string name="button_create">Create</string>

    <string name="icon_add">\u002B</string>
    <string name="icon_dropdown">\uE259</string>
    <string name="icon_remove">\uE020</string>
    <string name="icon_edit">\uE065</string>
    <string name="icon_update">\uE013</string>
    <string name="icon_menu">\uE012</string>
    <string name="icon_share">\uE066</string>
    <string name="icon_camera">\uE046</string>
    <string name="icon_gallery">\uE060</string>

    <string name="toolbar_title_main">Shopping List</string>
    <string name="toolbar_title_add_product">Add product</string>
    <string name="toolbar_title_create_product">Create product</string>
    <string name="toolbar_title_edit_product">Edit product</string>
    <string name="toolbar_title_manage_categories">Manage categories</string>

    <string name="confirmation_remove_product">Do you want to remove the product?</string>
    <string name="confirmation_remove_category">Do you want to remove the category?</string>

    <string name="error_invalid_category">Invalid category</string>
    <string name="error_invalid_name">Invalid name</string>
    <string name="error_invalid_image">Invalid image</string>
    <string name="error_product_already_exists">Product already exists</string>
    <string name="error_category_already_exists">Category already exists</string>
    <string name="error_cart_empty">The list is empty</string>
    <string name="error_category_in_use">The category is linked to one or more products.</string>
    <string name="error_product_in_use">The product is linked to one or more cart items.</string>

    <!-- CATEGORIES -->

    <string name="category_fruitsAndVegetables">Fruits &amp; Vegetables</string>
    <string name="category_breadAndGrain">Bread &amp; Grain Products</string>
    <string name="category_condimentsAndOthers">Condiments &amp; Others</string>
    <string name="category_milkAndCheese">Milk &amp; Cheese</string>
    <string name="category_meatAndFish">Meat &amp; Fish</string>
    <string name="category_frozen">Frozen</string>
    <string name="category_beverage">Beverage</string>
    <string name="category_household">Household</string>

    <!-- PRODUCTS -->

    <string name="product_apples">Apples</string>
    <string name="product_bananas">Bananas</string>
    <string name="product_carrots">Carrots</string>
    <string name="product_lemons">Lemons</string>
    <string name="product_lettuce">Lettuce</string>
    <string name="product_pineapple">Pineapple</string>
    <string name="product_potatoes">Potatoes</string>

    <string name="product_baguette">Baguette</string>
    <string name="product_cereals">Cereals</string>
    <string name="product_pasta">Pasta</string>
    <string name="product_rice">Rice</string>
    <string name="product_slicedBread">Sliced bread</string>

    <string name="product_coffeeCream">Coffee cream</string>
    <string name="product_corn">Corn</string>
    <string name="product_risotto">Risotto</string>
    <string name="product_salt">Salt</string>
    <string name="product_soup">Soup</string>
    <string name="product_sugar">Sugar</string>
    <string name="product_oil">Oil</string>
    <string name="product_tomatoSauce">Tomato sauce</string>

    <string name="product_cheese">Cheese</string>
    <string name="product_eggs">Eggs</string>
    <string name="product_gratedCheese">Grated cheese</string>
    <string name="product_milk">Milk</string>
    <string name="product_yogurt">Yogurt</string>
    <string name="product_butter">Butter</string>

    <string name="product_chicken">Chicken</string>
    <string name="product_fish">Fish</string>
    <string name="product_ham">Ham</string>
    <string name="product_meat">Meat</string>
    <string name="product_pork">Pork</string>
    <string name="product_salami">Salami</string>
    <string name="product_sardines">Sardines</string>
    <string name="product_tuna">Tuna</string>

    <string name="product_fishSticks">Fish sticks</string>
    <string name="product_frenchFries">French fries</string>
    <string name="product_iceCream">Ice cream</string>
    <string name="product_lasagna">Lasagna</string>
    <string name="product_nuggets">Nuggets</string>
    <string name="product_pizza">Pizza</string>

    <string name="product_beer">Beer</string>
    <string name="product_coffee">Coffee</string>
    <string name="product_icedTea">Iced tea</string>
    <string name="product_soda">Soda</string>
    <string name="product_water">Water</string>

    <string name="product_airFreshener">Air freshener</string>
    <string name="product_bleach">Bleach</string>
    <string name="product_bulb">Bulb</string>
    <string name="product_cleaningSupplies">Cleaning supplies</string>
    <string name="product_deodorant">Deodorant</string>
    <string name="product_dishwashingLiquid">Dishwashing liquid</string>
    <string name="product_hairRemover">Hair remover</string>
    <string name="product_kitchenRags">Kitchen rags</string>
    <string name="product_garbageBags">Garbage bags</string>
    <string name="product_laundryDetergent">Laundry Detergent</string>
    <string name="product_paperTowels">Paper towels</string>
    <string name="product_razor">Razor</string>
    <string name="product_shampoo">Shampoo</string>
    <string name="product_shavingFoam">Shaving foam</string>
    <string name="product_showerGel">Shower gel</string>
    <string name="product_soap">Soap</string>
    <string name="product_sponge">Sponge</string>
    <string name="product_spongeMetal">Sponge metal</string>
    <string name="product_swabs">Swabs</string>
    <string name="product_toiletPaper">Toilet paper</string>
    <string name="product_toothbrush">Toothbrush</string>
    <string name="product_toothpaste">Toothpaste</string>

</resources>